Validate errors to request information to external services